# samal-jit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  format.sh
examples/: spec.samal  test1.samal
peg_parser/: CMakeLists.txt
peg_parser/include/peg_parser/: ParsingState.hpp  PegForward.hpp  PegParser.hpp  PegParsingExpression.hpp  PegParsingExpressionParser.hpp  PegStructs.hpp  PegTokenizer.hpp  PegUtil.hpp
peg_parser/lib/: PegParser.cpp  PegParsingExpression.cpp  PegParsingExpressionParser.cpp  PegStructs.cpp  PegTokenizer.cpp  PegUtil.cpp
samal_cli/: CMakeLists.txt
samal_cli/src/: main.cpp
samal_code/examples/: Euler.samal  Lists.samal  Main.samal  Server.samal  Structs.samal  Templ.samal
samal_code/lib/: Core.samal  Gfx.samal  IO.samal  Math.samal  Net.samal
samal_code/spec/: spec.samal
samal_lib/: CMakeLists.txt
samal_lib/include/samal_lib/: AST.hpp  AstHelpers.hpp  Compiler.hpp  Datatype.hpp  DatatypeCompleter.hpp  EnumField.hpp  ExternalVMValue.hpp  Forward.hpp  GC.hpp  IdentifierId.hpp  Instruction.hpp  Parser.hpp  Pipeline.hpp  Program.hpp  StackInformationTree.hpp  Util.hpp  VM.hpp
samal_lib/lib/: AST.cpp  Compiler.cpp  Datatype.cpp  DatatypeCompleter.cpp  ExternalVMValue.cpp  GC.cpp  Parser.cpp  Pipeline.cpp  Program.cpp  StackInformationTree.cpp  VM.cpp
tests/: CMakeLists.txt  compiler_tests.cpp  lang_element_tests.cpp  lang_tests.cpp  peg_parser_tests.cpp
