cmake_minimum_required(VERSION 3.0)

project(samal)

option(SAMAL_ENABLE_JIT "Build samal jit" OFF)
option(SAMAL_ENABLE_GFX_CAIRO "Enable use of cairo" OFF)
option(SAMAL_ALIGNED_ACCESS "Ensure that every memory access is aligned (maybe slower & needs more memory)" OFF)
if(SAMAL_ENABLE_JIT)
    add_subdirectory(third_party/xbyak)
endif()

if(SAMAL_ENABLE_GFX_CAIRO)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(CAIROMM REQUIRED cairomm-1.0)
    include_directories(${CAIROMM_INCLUDE_DIRS})
    message(STATUS "Enable GFX Cairo")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSAMAL_ENABLE_GFX_CAIRO")
endif()

option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." ON)
if (${FORCE_COLORED_OUTPUT})
    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
        add_compile_options (-fdiagnostics-color=always)
    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
        add_compile_options (-fcolor-diagnostics)
    endif ()
endif ()

add_subdirectory(peg_parser)
add_subdirectory(samal_lib)
add_subdirectory(samal_cli)
add_subdirectory(tests)